# scrp-poc

./: .gitignore  pyproject.toml
.github/workflows/: python-ci.yml
src/scrp_poc/: beauty_soup.py  cli.py  main.py  mechasoup  regex_soup.py  text_extractor.py
