[tool.poetry]
name = "scrp-poc"
version = "0.1.0"
description = ""
authors = ["Mihamina Rakotovazaha <r.miham@yahoo.com>"]
readme = "README.readme.md"
packages = [{include = "scrp_poc", from = "src"}]

[tool.poetry.scripts]
my-scraper = "src.scrp_poc.main:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pre-commit = "^3.8.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
